@@ -27,7 +27,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.stream;
 import static java.util.Collections.unmodifiableMap;
@@ -69,7 +68,7 @@ public final class LocalTieredStorageHistory {
             matchingTypeEvents = new ArrayList<>(matchingTypeEvents);
         }
 
-        return matchingTypeEvents.stream().filter(matches(topicPartition)).collect(Collectors.toList());
+        return matchingTypeEvents.stream().filter(matches(topicPartition)).toList();
     }
 
     /**
